# image_metadata_writer

./: CMakeLists.txt  README.md  package.xml  setup.py
.github/: Jenkinsfile
config/: default.yaml
launch/: writer.launch
src/image_metadata_writer/: metadata_writer.py  metadata_writer_node.py
src/image_metadata_writer/metadata_writers/: base_writer.py  gps_writer.py
